# backend

./: .env  .gitignore  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  setup.py  setup.sh
app/: main.py  rag_pipeline.py
prisma/: schema.prisma
prisma/migrations/20250808115001_init/: migration.sql
